# simple_feedforward_rust

./: Cargo.toml  maturin_build.sh
src/: lib.rs  network.rs  test.rs
